[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "home_assistant_streamdeck_yaml"
description = "Home Assistant on Stream Deck: configured via YAML (with templates) and running on Linux, MacOS, and Windows"
version = "0.1.0"
authors = [{ name = "Bas Nijholt", email = "bas@nijho.length" }]
dependencies = [
    "cairosvg",
    "jinja2",
    "lxml",
    "matplotlib",
    "pillow",
    "pydantic",
    "python-dotenv",
    "pyyaml",
    "requests",
    "rich",
    "streamdeck",
    "websockets",
]
requires-python = ">=3.10"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/basnijholt/home-assistant-streamdeck-yaml"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "pytest-asyncio", "coverage", "pytest-cov"]

[project.scripts]
home-assistant-streamdeck-yaml = "home_assistant_streamdeck_yaml:main"

[tool.setuptools]
py-modules = ["home_assistant_streamdeck_yaml"]

[tool.pytest.ini_options]
addopts = """
    --cov=home_assistant_streamdeck_yaml
    --cov-report term
    --cov-report html
    --cov-fail-under=64
    --asyncio-mode=auto
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 150
target-version = "py39"
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.10"

[tool.ruff.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.validator"]
