[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2", "unidep[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "home_assistant_streamdeck_yaml"
description = "Home Assistant on Stream Deck: configured via YAML (with templates) and running on Linux, MacOS, and Windows"
dynamic = ["version", "dependencies"]
authors = [{ name = "Bas Nijholt", email = "bas@nijho.lt" }]
requires-python = ">=3.10"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/basnijholt/home-assistant-streamdeck-yaml"

[project.optional-dependencies]
test = ["pytest", "pre-commit", "pytest-asyncio", "coverage", "pytest-cov"]
docs = ["pandas", "tabulate", "tqdm"]
colormap = ["matplotlib"]

[project.scripts]
home-assistant-streamdeck-yaml = "home_assistant_streamdeck_yaml:main"

[tool.unidep]
channels = ["conda-forge"]
dependencies = [
    {pip = "streamdeck"},
    "cairosvg",
    "jinja2",
    "lxml",
    "pillow",
    "pydantic<2",
    "python-dotenv",
    "pyyaml",
    "requests",
    "rich",
    "websockets",
    {conda = "libusb"},
    {conda = "libhidapi"},
    {conda = "libudev:linux"},
    {conda = "matplotlib"}, # remove once unidep supports optional dependencies
]
platforms = [
    "linux-64",
    "linux-aarch64",
]

[tool.setuptools]
py-modules = ["home_assistant_streamdeck_yaml"]

[tool.pytest.ini_options]
addopts = """
    --cov=home_assistant_streamdeck_yaml
    --cov-report term
    --cov-report html
    --cov-fail-under=70
    --asyncio-mode=auto
"""

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.black]
line_length = 88

[tool.ruff]
line-length = 150
target-version = "py39"
select = ["ALL"]
ignore = [
    "T20",     # flake8-print
    "ANN101",  # Missing type annotation for {name} in method
    "S101",    # Use of assert detected
    "PD901",   # df is a bad variable name. Be kinder to your future self.
    "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in {name}
    "D402",    # First line should not be the function's signature
    "PLW0603", # Using the global statement to update `X` is discouraged
    "D401",    # First line of docstring should be in imperative mood
    "SLF001",  # Private member accessed
    "PLR0913", # Too many arguments to function call (N > 5)
    "TD002",   # Missing author in TODO; try: `# TODO(<author_name>): ...`
    "TD003",   # Missing issue link on the line following this TODO
    "FIX002",  # Line contains TODO
]

[tool.ruff.per-file-ignores]
"tests/*" = ["SLF001"]
"tests/test_examples.py" = ["E501"]
".github/*" = ["INP001"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
python_version = "3.10"

[tool.ruff.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.validator"]

[tool.setuptools_scm]
